fix clipping of TL button on iPhone X

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -895,6 +895,7 @@ span.var {
 .crowd_tl_notice {
   font-size:13px;
   padding:6px 10px;
+  padding-bottom: ~"calc(env(safe-area-inset-bottom) + 6px)";
   color:@main_text;
   position:fixed;
   bottom:0; left:0;
